# housetainer-domain/src/main/kotlin/com/housetainer/domain/model/invitation/RegisterInvitationRequest.kt
@@ -1,5 +1,0 @@
-package com.housetainer.domain.model.invitation
-
-data class RegisterInvitationRequest(
-    val code: String
-)
